2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Notification.wrl:
	* DepthBuffer.cpp:
	* ClipPlaneContainer.h:
	* ClipPlaneContainer.cpp:
	* ClipPlane.h:
	* ClipPlane.cpp:
	* X3DGeometryNode.h:
	* X3DGroupingNode.cpp:
	* X3DGeometryNode.cpp: 

2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewportContainer.cpp:
	* X3DShapeNode.cpp: 

2013-11-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* OpenGL.h:
	* X3DRenderer.cpp:
	* DepthBuffer.cpp:
	* LightContainer.h:
	* CollisionShape.h:
	* CollisionArray.h:
	* X3DBrowserSurface.h:
	* X3DBrowserContext.h:
	* LightContainer.cpp:
	* CollisionShape.cpp:
	* X3DBrowserContext.cpp:
	* Layer.cpp:
	* ViewportContainer.h:
	* ClipPlaneContainer.h:
	* Viewport.h:
	* ViewportContainer.cpp:
	* Viewport.cpp:
	* ClipPlaneContainer.cpp:
	* LayoutGroup.cpp:
	* X3DShapeNode.cpp:
	* X3DLightNode.h:
	* X3DLayerNode.cpp:
	* X3DLightNode.cpp:
	* X3DCollectableContainer.cpp:
	* X3DGroupingNode.h:
	* X3DViewportNode.h:
	* X3DGroupingNode.cpp: 

2013-11-06  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewVolume.cpp:
	* X3DRenderer.cpp:
	* X3DFlyViewer.cpp:
	* Viewport.cpp:
	* X3DExecutionContext.cpp:
	* SpotLight.cpp:
	* NavigationInfo.cpp:
	* OrthoViewpoint.cpp: 

2013-11-06  Holger Seelig  <holger.seelig@yahoo.de>

	* PlaneSensor.cpp: 

2013-11-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* X3DRenderer.h:
	* X3DRenderer.cpp:
	* ShapeContainer.h:
	* LightContainer.h:
	* X3DBrowserContext.h:
	* LightContainer.cpp:
	* ShapeContainer.cpp:
	* X3DBrowserContext.cpp:
	* ClipPlaneContainer.h:
	* X3DChildNode.h:
	* LightContainerArray.h:
	* ClipPlaneContainer.cpp:
	* ClipPlane.h:
	* ClipPlane.cpp:
	* X3DLayerNode.h:
	* X3DLightNode.h:
	* X3DLightNode.cpp:
	* X3DLayerNode.cpp:
	* X3DCollectableContainer.cpp:
	* X3DGroupingNode.h:
	* X3DGroupingNode.cpp:
	* RenderingProperties.h:
	* NavigationInfo.cpp:
	* RenderingProperties.cpp:
	* PlaneSensor.cpp: 
