@@ -305,6 +305,7 @@ Background::draw ()
 		glEnd ();
 	}
 
+	glDisable (GL_BLEND);
 	glDisable (GL_TEXTURE_2D);
 }
 
