@@ -92,11 +92,11 @@ X3DComposedGeometryNode::set_index (const MFInt32 & index)
 {
 	auto _coord = x3d_cast <X3DCoordinateNode*> (coord ());
 
-	int32_t numPoints = -1;
-
 	if (not index .empty ())
 	{
 		// Determine number of points and polygons.
+
+		int32_t numPoints = -1;
 
 		for (const auto & i : index)
 		{
